--- a/docker-mysql/docker-compose.yaml
+++ b/docker-mysql/docker-compose.yaml
@@ -4,13 +4,15 @@ services:
     image: mysql:5.7
     restart: always
     environment:
-      MYSQL_DATABASE: 'db'
+      MYSQL_DATABASE: 'azulksa'
       # So you don't have to use root, but you can if you like
-      MYSQL_USER: 'desvan'
+      MYSQL_USER: 'azulksauser'
       # You can use whatever password you like
-      MYSQL_PASSWORD: 'Desvan2020.'
+      MYSQL_PASSWORD: 'azulksapwd'
       # Password for root access
-      MYSQL_ROOT_PASSWORD: 'Desvan2020.'
+      MYSQL_ROOT_PASSWORD: 'azulksapwd'
+      # Change time zone
+      TZ: America/Bogota
     ports:
       # <Port exposed> : < MySQL Port running inside container>
       - '3306:3306'
@@ -19,7 +21,6 @@ services:
       - '3306'
       # Where our data will be persisted
     volumes:
-      - my-db:/var/lib/mysql
-# Names our volume
-volumes:
-  my-db:
+      - ./my-bd:/var/lib/mysql
+
+
